src/tests/snapshots/niri__tests__window_opening__check_target_size@omT-ofT-dhU-wfsAN.snap
---
source: src/tests/window_opening.rs
description: "open maximized: true\nopen floating: true\ndefault window height: U\nwant fullscreen: AN"
expression: snapshot
---
initial configure:
size: 0 × 0, bounds: 1280 × 720, states: []

post-map configures:
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen]
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen, Activated]

unfullscreen configure:
size: 0 × 0, bounds: 1280 × 720, states: [Activated]
