src/tests/snapshots/niri__tests__window_opening__check_target_size@omT-ofT-dhU.snap
---
source: src/tests/window_opening.rs
description: "open maximized: true\nopen floating: true\ndefault window height: U"
expression: snapshot
---
initial configure:
size: 0 × 0, bounds: 1280 × 720, states: []

post-map configures:
size: 1 × 1, bounds: 1280 × 720, states: [Activated]
